<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:text="@string/reset_password"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <Button
                android:id="@+id/pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pin_code"
                android:drawableTop="@drawable/setting_reset_password"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:background="@drawable/background_row"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/pattern"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pattern"
                android:drawableTop="@drawable/setting_reset_pattern"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:background="@drawable/background_row"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/fingerprint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fingerprint"
                android:drawableTop="@drawable/icon_fingerprints"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:background="@drawable/background_row"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>