<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_bottom_dialog_grant_draw_permission"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <vn.com.call.widget.ImageViewRatio
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/permission"
        android:layout_marginTop="16dp"
        app:ratioWidth="1077"
        app:ratioHeight="492"
        app:datum="width"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/content_bottom_dialog_grant_draw_permission"
        android:layout_marginTop="16dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/go_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_button_go_settings"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false"/>
</LinearLayout>