<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_message"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textColor="@color/gray_400" />

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:text="Today"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/time"
            android:textColor="@color/gray_400" />

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:text="Now"
            android:textColor="@android:color/black"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/unschedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_schedule_message"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone"
        android:text="@string/unschedule"/>
</merge>